styles.css
/* Starting Screen Stylization */
body {
    background-size: cover;
    height: 100vh;    
}

.title-page {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: url("../images/start-screen.png");
}

.start {
    background-image: url("../images/Augmentation-Revelation.png");
    height: 120vh;
}

.title-box {
    position: relative;
    display: inline-block;
    display: flex;
    justify-content: center;
    margin-top: 15vh;
}

#title {
    font-size: 7vh;
    font-family: 'inter', sans-serif;
    color: white;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin: 0;  
}

.flower-border {
    position: relative;
    display: inline-block;
    display: flex;
    justify-content: center;
    width: 525px;
}

.flower-border:hover {
    transform: scale(1.2);
}

#start-option {
    position: absolute;
    top: 40%;
    background: none;
    border: none;
    padding: 0;
    color: white;
    font-family: 'inter', sans-serif;
    font-size: 5vh;
    cursor: pointer;
    
}

#Continue {
    margin-top: 5vh;
}

#New-Game {
    margin-top: 10vh;
}

